logs/clorox.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/clorox'...
Compiling './lib/python3.5/site-packages/clorox/clorox.py'...
***   File "./lib/python3.5/site-packages/clorox/clorox.py", line 105
    print 'You must provide a directory using the --dir option'
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clorox/printer.py'...
***   File "./lib/python3.5/site-packages/clorox/printer.py", line 57
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/clorox/reporter.py'...
***   File "./lib/python3.5/site-packages/clorox/reporter.py", line 19
    print json.dumps({
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/clorox-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/couleur'...
Compiling './lib/python3.5/site-packages/couleur/__init__.py'...
***   File "./lib/python3.5/site-packages/couleur/__init__.py", line 104
    up_count_regex = re.compile(wrap_escaped(ur'up'))
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/couleur-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
